Import of AGENT/SSH-Batch-0.007 from CPAN.
gitpan-cpan-distribution: SSH-Batch
gitpan-cpan-version:      0.007
gitpan-cpan-path:         AGENT/SSH-Batch-0.007.tar.gz
gitpan-cpan-author:       AGENT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.007
+- added -c <concurrency> option to atnodes/tonodes/key2nodes and it has the
+  default SSH concurrency limit of 20.
+- skip directories in tonode if no -r specified.
+
 0.006
 - fixed a bug in multiline expression handling in ~/.fornodesrc parsing.
 - added multi-line expression samples to the POD docs.
