--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.014
+- display Net::OpenSSH's error messages when failures occur.
+- added a lot more docs.
+
 0.013
 - apply the invalid PID fixes to tonodes and key2nodes as well.
 - implemented -L option in tonodes.
