Import of AGENT/SSH-Batch-0.028 from CPAN.
gitpan-cpan-distribution: SSH-Batch
gitpan-cpan-version:      0.028
gitpan-cpan-path:         AGENT/SSH-Batch-0.028.tar.gz
gitpan-cpan-author:       AGENT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.028
+- atnodes: fixed tmp file leaks.
+- atnodes: automatically check if openssh version >= 4.1.
+
 0.027
 - added support for the environment SSH_BATCH_RC to specify a
   different file name than the default ~/.fornodesrc.
@@ -6,7 +10,7 @@
 - added the SSH_BATCH_PASSPHRASE environment for -P and
   SSH_BATCH_PASSWORD env for -w.
 - added passphrase support.
-- added some doc for tty option.
+- added some docs for tty option.
 
 0.024
 - tonodes: added rsync archive, update and compress mode. (liseen)
